--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Shahboz Olmosov",
   "license": "ISC",
   "dependencies": {
+    "connect-pg-simple": "^9.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
