--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
+    "express-validator": "^7.0.1",
     "pg": "^8.11.3",
     "sequelize": "^6.37.1"
   },
